LR page - development section

--- a/pages/lucid-reality/lucid-reality.scss
+++ b/pages/lucid-reality/lucid-reality.scss
@@ -325,7 +325,11 @@ $border-radius: 5px;
     background-size: contain;
     background-position: bottom;
     background-repeat: no-repeat;
-    height: 77vw;
+    height: 90vh;
+
+    @include break-small-to-large(desktop) {
+      height: 77vw;
+    }
 
     .common-wrapper {
       @extend %section-top-spacing;
@@ -432,53 +436,67 @@ $border-radius: 5px;
     }
 
     .inner-container {
-      .first-section {
-        h2 {
-          color: #000000;
-          font-family: map-get($font-families, secondary-bold);
-          font-size: 26px;
-          letter-spacing: -0.2px;
-          line-height: 36px;
+      .section-wrapper {
+        display: flex;
+        flex-direction: column;
+
+        @include break-small-to-large(tablet) {
+          flex-direction: row;
         }
 
-        p {
-          color: #3B3B3B;
-          font-family: map-get($font-families, primary);
-          font-size: 16px;
-          letter-spacing: -0.2px;
-          line-height: 24px;
+
+        .first-section {
+          margin-bottom: 60px;
+
+          h2 {
+            color: #000000;
+            font-family: map-get($font-families, secondary-bold);
+            font-size: 26px;
+            letter-spacing: -0.2px;
+            line-height: 36px;
+          }
+
+          p {
+            color: #3B3B3B;
+            font-family: map-get($font-families, primary);
+            font-size: 16px;
+            letter-spacing: -0.2px;
+            line-height: 24px;
+          }
+
+          a {
+            color: #FC7764;
+            font-family: map-get($font-families, secondary-medium);
+            font-size: 18px;
+            line-height: 32px;
+          }
         }
 
-        a {
-          color: #FC7764;
-          font-family: map-get($font-families, secondary-medium);
-          font-size: 18px;
-          line-height: 32px;
-        }
-      }
+        .second-section {
+          margin-bottom: 60px;
 
-      .second-section {
-        h2 {
-          color: #000000;
-          font-family: map-get($font-families, secondary-bold);
-          font-size: 26px;
-          letter-spacing: -0.2px;
-          line-height: 36px;
-        }
+          h2 {
+            color: #000000;
+            font-family: map-get($font-families, secondary-bold);
+            font-size: 26px;
+            letter-spacing: -0.2px;
+            line-height: 36px;
+          }
 
-        p {
-          color: #3B3B3B;
-          font-family: map-get($font-families, primary);
-          font-size: 16px;
-          letter-spacing: -0.2px;
-          line-height: 24px;
-        }
+          p {
+            color: #3B3B3B;
+            font-family: map-get($font-families, primary);
+            font-size: 16px;
+            letter-spacing: -0.2px;
+            line-height: 24px;
+          }
 
-        a {
-          color: #FC7764;
-          font-family: map-get($font-families, secondary-medium);
-          font-size: 18px;
-          line-height: 32px;
+          a {
+            color: #FC7764;
+            font-family: map-get($font-families, secondary-medium);
+            font-size: 18px;
+            line-height: 32px;
+          }
         }
       }
     }
