--- a/pages/lucid-reality/lucid-reality.scss
+++ b/pages/lucid-reality/lucid-reality.scss
@@ -54,6 +54,65 @@
   }
 }
 
+.award-testimonial {
+  padding: 30px 10px;
+  padding: 2.35vw .78vw;
+  padding-right: 30px;
+  padding-right: 2.35vw;
+
+  &__para {
+    font-family: map-get($font-families, secondary-medium);
+    font-size: 16px;
+    font-size: 4.3vw;
+    @include break-small-to-large(tablet) {
+      font-size: 1.3vw;
+    }
+  }
+
+  &__wrapper {
+    padding-top: 1.5vw;
+
+    .testimonial-client-img {
+      width: 36px;
+      height: 36px;
+    }
+
+    .testimonial-client-para {
+      padding-left: 1.3vw;
+      font-family: map-get($font-families, primary);
+
+      &__name {
+        text-transform: uppercase;
+        color: #01C4CF;
+        font-weight: 500;
+      }
+
+      &__designation {
+        line-height: .9;
+        font-size: .9vw;
+        text-transform: uppercase;
+      }
+
+      &__company {
+        text-transform: capitalize;
+        position: relative;
+        padding-left: 1vw;
+
+        &::before {
+          content: '';
+          background: rgba(0, 0, 0, 0.89);
+          width: .1vw;
+          height: .8vw;
+          position: absolute;
+          top: 1px;
+          left: 5px;
+          z-index: 0;
+        }
+      }
+    }
+  }
+}
+
 // Global section divison
 .section-1 {
   width: 45%;
@@ -89,7 +148,7 @@ $border-radius: 5px;
 }
 
 %gutter {
-  padding-left:15%;
+  padding-left: 15%;
   padding-right: 15%;
 }
 
@@ -123,10 +182,11 @@ $border-radius: 5px;
     padding: 26px 14px;
     margin-left: 32px;
     margin-right: 32px;
+
     @include break-small-to-large(tablet) {
-      padding: 41px 218px;
-      margin-left: 20%;
-      margin-right: 20%;
+      padding: 41px 100px;
+      margin-left: 100px;
+      margin-right: 100px;
     }
   }
 
@@ -355,7 +415,22 @@ $border-radius: 5px;
       @extend %section-btm-spacing;
 
       .award-wrapper {
+        display: flex;
+        flex-direction: column;
         padding-top: 80px;
+
+        @include break-small-to-large(tablet) {
+          display: grid;
+          grid-template-columns: 35% 65%;
+        }
+
+        .first-section {
+
+        }
+
+        .second-section {
+
+        }
 
         .award-bg {
           position: relative;
@@ -379,61 +454,6 @@ $border-radius: 5px;
             width: 80%;
             padding: 0px 13px;
             padding: 0 1.1vw;
-          }
-        }
-
-        .award-testimonial {
-          padding: 30px 10px;
-          padding: 2.35vw .78vw;
-          padding-right: 30px;
-          padding-right: 2.35vw;
-
-          &__para {
-            font-family: map-get($font-families, secondary-medium);
-            font-size: 1.3vw;
-          }
-
-          &__wrapper {
-            padding-top: 1.5vw;
-
-            .testimonial-client-img {
-              width: 36px;
-              height: 36px;
-            }
-
-            .testimonial-client-para {
-              padding-left: 1.3vw;
-              font-family: map-get($font-families, primary);
-
-              &__name {
-                text-transform: uppercase;
-                color: #01C4CF;
-                font-weight: 500;
-              }
-
-              &__designation {
-                line-height: .9;
-                font-size: .9vw;
-                text-transform: uppercase;
-              }
-
-              &__company {
-                text-transform: capitalize;
-                position: relative;
-                padding-left: 1vw;
-
-                &::before {
-                  content: '';
-                  background: rgba(0, 0, 0, 0.89);
-                  width: .1vw;
-                  height: .8vw;
-                  position: absolute;
-                  top: 1px;
-                  left: 5px;
-                  z-index: 0;
-                }
-              }
-            }
           }
         }
       }
