--- a/styles/pages/_header-common.scss
+++ b/styles/pages/_header-common.scss
@@ -3,10 +3,10 @@
 .header-container {
     display: flex;
     flex-direction: row;
-    padding: 1.6% 12.5%;
-    // padding: 1.8% 4.3%;
-    // padding-bottom: 1.8%;
-    //box-shadow: 0 0 10px 0 rgba(17,16,18,.08);
+    padding: 1.6% 8%;
+    @include break-small-to-large(tablet) {
+        padding: 1.6% 12.5%;
+    }
     .header-navigation {
         display: flex;
         flex-direction: row;
@@ -20,6 +20,12 @@
             margin: 0;
             -webkit-animation: fadeIn .3s ease-out;
             -moz-animation: fadeIn .3s ease-out;
+            &:nth-child(1) {
+                display: none;
+                @include break-small-to-large(tablet) {
+                    display: flex;
+                }
+            }
             &.hide-it {
                 display: none;
             }
@@ -37,33 +43,11 @@
                     &.hamburger-menu{
                         display: flex;
                         .nav-hamburger-icon {
-                            width: 1.35vw;
+                            width: 5.35vw;
+                            @include break-small-to-large(tablet) {
+                                width: 1.35vw;
+                            }
                         }
-                        // .hamburger-menu {
-                        //     position: relative;
-                        //     width: 6px;
-                        //     width: .40vw;
-                        //     background: #000;
-                        //     height: 6px;
-                        //     height: .40vw;
-                        //     display: inline-block;
-                        //     border-radius: 50%;
-                        //     &::after {
-                        //         content: '';
-                        //         position: absolute;
-                        //         width: inherit;
-                        //         width: inherit;
-                        //         background: inherit ;
-                        //         height: inherit;
-                        //         height: inherit;
-                        //         top: 11px;
-                        //         top: .85vw;
-                        //         border-radius: 50%;
-                        //     }
-                        //     &.menu-2 {
-                        //         margin-left: .4vw;
-                        //     }
-                        // }
                     }
                 }
             }
@@ -73,7 +57,10 @@
         display: inline-flex;
         vertical-align: middle;
         &__Quovantis-logo {
-            width: 11vw;
+            width: 40vw;
+            @include break-small-to-large(tablet) {
+                width: 11vw;
+            }
         }
     }
 }
