--- a/pages/lucid-reality/lucid-reality.scss
+++ b/pages/lucid-reality/lucid-reality.scss
@@ -58,12 +58,15 @@
     font-family: map-get($font-families, secondary-medium);
     font-size: 16px;
     font-size: 4.3vw;
+    margin-bottom: 20px;
+
     @include break-small-to-large(tablet) {
       font-size: 1.3vw;
     }
   }
 
   .award-testimonial__wrapper {
+    display: flex;
     padding-top: 1.5vw;
 
     .testimonial-client-img {
@@ -82,27 +85,13 @@
       }
 
       &__designation {
-        line-height: .9;
-        font-size: .9vw;
-        text-transform: uppercase;
-      }
-
-      &__company {
         text-transform: capitalize;
-        position: relative;
-        padding-left: 1vw;
-
-        &::before {
-          content: '';
-          background: rgba(0, 0, 0, 0.89);
-          width: .1vw;
-          height: .8vw;
-          position: absolute;
-          top: 1px;
-          left: 5px;
-          z-index: 0;
-        }
+        color: #3B3B3B;
+        font-family: map-get($font-families, primary);
+        font-size: 16px;
+        line-height: 20px;
       }
+
     }
   }
 }
@@ -230,7 +219,6 @@ $border-radius: 5px;
 
   // Second Section
   .what-we-did {
-    padding: 0 16px;
     margin-top: -58px;
 
     .working-area-wrapper {
@@ -355,7 +343,7 @@ $border-radius: 5px;
         .first-section {
           display: none;
 
-          @include break-small-to-large(desktop) {
+          @include break-small-to-large(tablet) {
 
           }
         }
@@ -363,7 +351,7 @@ $border-radius: 5px;
         .second-section {
           .solution-list-wrapper {
 
-            @include break-small-to-large(desktop) {
+            @include break-small-to-large(tablet) {
               margin-top: 50px;
               margin-left: 50px;
             }
@@ -424,7 +412,7 @@ $border-radius: 5px;
     background-repeat: no-repeat;
     height: 90vh;
 
-    @include break-small-to-large(desktop) {
+    @include break-small-to-large(tablet) {
       height: 77vw;
     }
 
