responsive header expanded menu

--- a/styles/pages/_header-common.scss
+++ b/styles/pages/_header-common.scss
@@ -65,6 +65,7 @@
     }
 }
 
+//expanded menu for desktop & laptop
 .expanded-menu {
     display: none;
     flex-direction: row;
@@ -114,6 +115,20 @@
   }
 }
 
+//expanded menu for mobile
+.mobile-expanded-menu {
+    position: absolute;
+    background: #fff;
+    width: 65%;
+    right: 0;
+    height: 100vh;
+    top: 0;
+    &__wrapper {
+        padding-right: 30px;
+        padding-top: 100px;
+    }
+}
+//end
 .visuallyhidden {
     opacity: 0;
 }
@@ -121,15 +136,25 @@
 .header-menu-list {
     text-align: right;
     &__items {
-        font-size: 14px;
-        font-size: .7vw;
-        line-height: 2vw;
+        font-size: 4vw;
+        line-height: 9vw;
+        @include break-small-to-large(tablet) {
+            font-size: 14px;
+            font-size: .7vw;
+            line-height: 2vw;
+        }
         &.items-main {
-            font-size: 2.6vw; // var
-            //font-size: 46px; // var
+            font-size: 5.6vw;
             font-weight: 600; // var
             letter-spacing: .2px;
-            line-height: 4.6vw;
+            line-height: 11.6vw;
+            @include break-small-to-large(tablet) {
+                font-size: 2.6vw; // var
+                //font-size: 46px; // var
+                font-weight: 600; // var
+                letter-spacing: .2px;
+                line-height: 4.6vw;
+            }
         }
         &.item-btn {
             padding-top: 2vw;
