--- a/styles/utilities/_helpers.scss
+++ b/styles/utilities/_helpers.scss
@@ -85,7 +85,7 @@ input.small {
   border-radius: 5px;
   border-radius: .4vw;
   padding: 7px 13px;
-  padding: .55vw 1.02vw;
+  // padding: .55vw 1.02vw;
 
   &:hover {
     background-color: #FF6B57;
@@ -98,7 +98,7 @@ input.small {
   color: #ffffff; // var
   border-radius: 5px;
   padding: 14px 16px;
-  //padding: 3.2vw 3.8vw;
+  // padding: 3.2vw 3.8vw;
   display: inline-block;
 
   color: #FFFFFF;
