--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -8,8 +8,8 @@ $breakpoints: (
   small: 768px,
   xMedium: 992px,
   medium: 1100px,
-  xLarge: 1408px,
-  large: 1920px
+  large: 1408px,
+  xLarge: 1920px
 );
 
 /*
