--- a/styles/utilities/_helpers.scss
+++ b/styles/utilities/_helpers.scss
@@ -83,8 +83,8 @@ input.small {
   color: #fff; // var
   font-weight: 500; // var
   border-radius: 5px;
-  border-radius: .4vw;
-  padding: 7px 13px;
+  //border-radius: .4vw;
+  padding: 10px 20px;
   // padding: .55vw 1.02vw;
 
   &:hover {
